CentOS version was updated

--- a/centos-pod.yaml
+++ b/centos-pod.yaml
@@ -4,7 +4,7 @@ metadata:
   name: centos-pod
 spec:
   containers:
-  - image: centos
+  - image: centos:8
     name: centos
     stdin: true
     tty: true 
