--- a/fortune-pod.yaml
+++ b/fortune-pod.yaml
@@ -6,10 +6,13 @@ metadata:
    name: fortune-pod
 spec:
   containers:
-  - image: centos
+  - image: centos:7
     name: html-generator
-    stdin: true
-    tty: true 
+    command: ["/bin/sh", "-c"]
+    args: 
+      - yum install epel-release -y;
+        yum install fortune-mod -y;
+        while true; do fortune > /html/index.html; sleep 5; done;
     volumeMounts:
     - name: html-volume
       mountPath: /html
